# miyabi-code

./: .agent-context.json  .claude.json  .claude.json.backup  .dockerignore  .ecignore  .editorconfig  .env.auth.example  .env.backup  .env.example  .env.fanza.template  .env.local.example  .env.sample  .env.telegram.example  .envrc  .eslintrc.json  .gitignore  .gitmessage  .gitmodules  .mcp.json  .miyabi-orchestra-ready.md  .miyabi.yml  .miyabi.yml.backup  .miyabirules.example  .miyabirules.simple  .quickstart-commands.sh  .vercelignore  0001-feat-testing-Add-test-scripts-and-configurations.patch  0002-feat-Integrate-Gemini-CLI-with-Miyabi-project.patch  AGENTS.md  AGENTS_update_20251103.patch  ALPHA_RELEASE_PLAN.md  API_TEST_SUITE_GUIDE.md  BACKLOG_DRY_RUN_IMPROVEMENTS.md  BASH_SESSION_CRASH_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_v3.0_backup.md  CODEX_INTEGRATION_PROGRESS.md  CODEX_WORKER_INSTRUCTIONS.md  COMMIT_CONVENTION.md  (+136 more)
agent-orchestration/webapp_framework/: LICENSE  MANIFEST.in  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
agent-orchestration/webapp_framework/auth/: authenticator.py  permissions.py  tokens.py
agent-orchestration/webapp_framework/cli/: commands.py  server.py
agent-orchestration/webapp_framework/core/: __init__.py  application.py  middleware.py  request.py  response.py  router.py
agent-orchestration/webapp_framework/database/: connection.py  migrations.py  orm.py  query.py
agent-orchestration/webapp_framework/docs/: API_REFERENCE.md  DEPLOYMENT.md  QUICKSTART.md  README.md
agent-orchestration/webapp_framework/examples/: full_app.py  hello_world.py  rest_api.py
agent-orchestration/webapp_framework/http/: __init__.py  cookies.py  headers.py  session.py  status.py
agent-orchestration/webapp_framework/routing/: converters.py  matcher.py  route.py
agent-orchestration/webapp_framework/templating/: engine.py  filters.py  loader.py
agent-orchestration/webapp_framework/testing/: assertions.py  client.py  fixtures.py
agent-orchestration/webapp_framework/tests/: test_auth.py  test_core.py  test_http.py  test_validation.py
agent-orchestration/webapp_framework/utils/: crypto.py  datetime_utils.py  file_utils.py  strings.py
agent-orchestration/webapp_framework/validation/: rules.py  sanitizer.py  validator.py
clickfunnels/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PRODUCT_REQUIREMENTS.md  README.md  docker-compose.yml
clickfunnels/backend/: Cargo.toml  Dockerfile
clickfunnels/clickfunnels-api/: Cargo.toml
clickfunnels/clickfunnels-api/src/: error.rs  lib.rs  state.rs
clickfunnels/clickfunnels-api/tests/: api_integration_test.rs
clickfunnels/clickfunnels-core/: Cargo.toml
clickfunnels/clickfunnels-core/src/: lib.rs
clickfunnels/clickfunnels-db/: Cargo.toml
clickfunnels/clickfunnels-db/src/: error.rs  lib.rs
clickfunnels/clickfunnels-integrations/: Cargo.toml
clickfunnels/clickfunnels-integrations/src/: lib.rs
clickfunnels/clickfunnels-server/: Cargo.toml
clickfunnels/clickfunnels-server/src/: main.rs
clickfunnels/database/migrations/: 001_init_schema.sql
clickfunnels/frontend/: FRONTEND_SETUP_COMPLETE.md  README.md  index.html  package.json
clickfunnels/frontend/src/: App.css  App.tsx  index.css
clickfunnels/migrations/: 001_create_users_table.sql  002_create_funnels_table.sql  003_create_pages_table.sql  004_create_integrations_table.sql
crates/codex-miyabi/: Cargo.toml  README.md
crates/codex-miyabi/src/: main.rs
crates/codex-miyabi/tests/: snapshots.rs
crates/miyabi-a2a/: API_REFERENCE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  ERROR_RECOVERY_GUIDE.md  IMPLEMENTATION_STATUS.md  PARAMETER_MAPPING_COMPLETION_REPORT.md  README.md  SPRINT_2.1_RUST_API_REPORT.md  build.rs  test_dag.json
crates/miyabi-a2a-gateway/: Cargo.toml  README.md
crates/miyabi-a2a-gateway/src/: agent_bootstrap.rs  error.rs  gateway.rs  lib.rs  monitor.rs  queue.rs  registry.rs  router.rs  types.rs
crates/miyabi-a2a/dashboard/: COMPLETE_IMPLEMENTATION_PLAN.md  PERFORMANCE_REPORT.md  PHASE_1_COMPLETE.md  QUICK_WINS.md  SPRINT_1.3_REPORT.md  UIUX_IMPROVEMENT_PLAN.md  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
crates/miyabi-a2a/examples/: debug_octocrab.rs  ui_server.rs
crates/miyabi-a2a/proto/: a2a.proto
crates/miyabi-a2a/src/: error.rs  lib.rs  task.rs  types.rs
crates/miyabi-a2a/static/: GETTING_STARTED.md  README.md  UI_UX_PROPOSAL.md  index.html
crates/miyabi-a2a/tests/: error_recovery_tests.rs  grpc_integration.rs  integration_test.rs  rest_integration_tests.rs  webhook_integration_tests.rs
crates/miyabi-agent-business/: Cargo.toml  PERSISTENCE.md  README.md
crates/miyabi-agent-business/examples/: jonathan_ive_design_test.rs  persistence_demo.rs
crates/miyabi-agent-business/src/: ai_entrepreneur.rs  analytics.rs  content_creation.rs  crm.rs  funnel_design.rs  jonathan_ive_design.rs  lib.rs  market_research.rs  marketing.rs  persistence.rs  persona.rs  product_concept.rs  (+5 more)
crates/miyabi-agent-codegen/: Cargo.toml
crates/miyabi-agent-coordinator/: Cargo.toml
crates/miyabi-agent-core/: CLAUDE_AGENT_SDK.md  Cargo.toml  NEXT_STEPS.md  ORCHESTRA_STATUS.md  PROGRESS_TRACKING.md  README.md  claude-code-mcp.json
crates/miyabi-agent-integrations/: Cargo.toml
crates/miyabi-agent-issue/: Cargo.toml  README.md
crates/miyabi-agent-review/: Cargo.toml  README.md
crates/miyabi-agent-swml/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  WORLD_IMPLEMENTATION.md
crates/miyabi-agent-workflow/: Cargo.toml  README.md
crates/miyabi-agents/: Cargo.toml  HOOK_INTEGRATION_GUIDE.md  README.md  REFACTOR_PLAN.md
crates/miyabi-api-gateway/: Cargo.toml
crates/miyabi-approval/: Cargo.toml  README.md
crates/miyabi-auth/: Cargo.toml
crates/miyabi-aws-agent/: Cargo.toml
crates/miyabi-benchmark/: Cargo.toml  README.md
crates/miyabi-business-agents/: Cargo.toml  DEPRECATED.md  USAGE.md
crates/miyabi-business-api/: Cargo.toml
crates/miyabi-claudable/: Cargo.toml  README.md
(+7067 files in other folders)
