[workspace]
resolver = "2"
members = [
    "crates/miyabi-core",
    "crates/miyabi-types",
    "crates/miyabi-cli",
    "crates/miyabi-agent-core",
    "crates/miyabi-agent-coordinator",
    "crates/miyabi-agent-codegen",
    "crates/miyabi-agent-review",
    "crates/miyabi-agent-workflow",
    "crates/miyabi-agent-business",
    "crates/miyabi-agent-integrations",
    "crates/miyabi-agents",
    "crates/miyabi-github",
    "crates/miyabi-worktree",
    "crates/miyabi-llm",
    "crates/miyabi-potpie",
    "crates/miyabi-business-agents",
    "crates/miyabi-mcp-server",
    "crates/miyabi-discord-mcp-server",
    "crates/miyabi-a2a",
    "crates/miyabi-webhook",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75.0"
authors = ["Shunsuke Hayashi <supernovasyun@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ShunsukeHayashi/Miyabi"
homepage = "https://github.com/ShunsukeHayashi/Miyabi"
description = "Complete autonomous AI development operations platform - Rust edition"
keywords = ["github", "automation", "ai", "agents", "devops"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core dependencies
# Note: Only include necessary tokio features to reduce compile time
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"
colored = "3.0"

# GitHub API
octocrab = "0.47"
reqwest = { version = "0.12", features = ["json"] }

# Git operations
git2 = "0.20"

# Anthropic API
async-openai = { version = "0.24", default-features = false, features = ["rustls"] }

# File system & I/O
walkdir = "2.5"
ignore = "0.4"
tempfile = "3.13"
dunce = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# System info
hostname = "0.4"

# Testing
insta = "1.40"
serial_test = "3.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Optimized profile for development with better performance
[profile.dev-opt]
inherits = "dev"
opt-level = 1

# Profile for CI/CD testing
[profile.ci]
inherits = "dev"
debug = false
incremental = false

# Smaller binary size for distribution
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"

# Workspace optimization: compile dependencies with optimizations even in dev mode
[profile.dev.package."*"]
opt-level = 3
