[workspace]
resolver = "2"
members = [
    "crates/miyabi-tmux-orchestrator",
    "crates/miyabi-prompt-engine",
    "crates/miyabi-seedance-api",
    "crates/miyabi-core",
    "crates/miyabi-types",
    "crates/miyabi-cli",
    "crates/miyabi-agent-core",
    "crates/miyabi-agent-coordinator",
    "crates/miyabi-agent-codegen",
    "crates/miyabi-agent-review",
    "crates/miyabi-agent-workflow",
    "crates/miyabi-agent-business",
    "crates/miyabi-agent-integrations",
    "crates/miyabi-agents",
    "crates/miyabi-github",
    "crates/miyabi-worktree",
    "crates/miyabi-llm-core",
    "crates/miyabi-llm-anthropic",
    "crates/miyabi-llm-openai",
    "crates/miyabi-llm-google",
    "crates/miyabi-llm",
    # "crates/miyabi-potpie",  # MERGED into miyabi-knowledge/potpie module
    "crates/miyabi-knowledge",
    # "crates/miyabi-business-agents",  # DEPRECATED: Replaced by miyabi-agents/business module

    # === MCP Servers (Legacy - using jsonrpc-core) ===
    "crates/miyabi-mcp-server",
    "crates/miyabi-discord-mcp-server",
    "crates/miyabi-a2a-gateway",
    "crates/miyabi-session-manager",

    # === MCP Servers (New - using rmcp v0.8.0) ===
    # Template and migration infrastructure
    "crates/miyabi-mcp-template",  # Template for new MCP servers

    # Phase 1: Simple servers (Priority 1)
    # "crates/miyabi-mcp-rules",  # Rules and cloud service integration
    # "crates/miyabi-mcp-context",  # Context engineering

    # Phase 2: Core Miyabi servers (Priority 2)
    # "crates/miyabi-mcp-tmux",  # tmux multithread communication (CRITICAL)
    # "crates/miyabi-mcp-obsidian",  # Obsidian knowledge system

    # Phase 3: Integration servers (Priority 3)
    # "crates/miyabi-mcp-pixel",  # Pixel device integration
    # "crates/miyabi-mcp-sse",  # SSE gateway

    # Phase 4: Lark ecosystem (Priority 4)
    # "crates/miyabi-mcp-lark-enhanced",  # Lark MCP enhanced
    # "crates/miyabi-mcp-lark-openapi",  # Lark OpenAPI enhanced
    # "crates/miyabi-mcp-lark-wiki",  # Lark Wiki agents

    # Other crates
    "crates/miyabi-a2a",
    "crates/miyabi-webhook",
    "crates/miyabi-benchmark",
    "crates/miyabi-web-api",
    "crates/miyabi-orchestrator",  # Merged: miyabi-scheduler + miyabi-feedback-loop
    # "crates/miyabi-feedback-loop",  # MERGED into miyabi-orchestrator
    # "crates/miyabi-scheduler",  # MERGED into miyabi-orchestrator
    "crates/miyabi-e2e-tests", "crates/miyabi-modes",  # E2E test framework
    "crates/miyabi-agent-swml",  # SWML Agent (Phase 1 implemented)
    "crates/miyabi-workflow",  # Workflow DSL - Mastra-style orchestration
    "crates/miyabi-historical",  # Merged: miyabi-historical-ai + miyabi-historical-api
    "crates/miyabi-logging-monitor",
    "crates/miyabi-aws-agent",
    "crates/miyabi-business-api",
    "crates/miyabi-composite-state",
    "crates/miyabi-tui",  # Terminal User Interface
]
exclude = [
    "miyabi-desktop/src-tauri",  # Tauri app has its own workspace
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75.0"
authors = ["Shunsuke Hayashi <supernovasyun@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ShunsukeHayashi/Miyabi"
homepage = "https://github.com/ShunsukeHayashi/Miyabi"
description = "Complete autonomous AI development operations platform - Rust edition"
keywords = ["github", "automation", "ai", "agents", "devops"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core dependencies
# Note: Only include necessary tokio features to reduce compile time
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time", "signal"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"
colored = "3.0"

# GitHub API
octocrab = "0.48"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Git operations
git2 = "0.20"

# Anthropic API
async-openai = { version = "0.24", default-features = false, features = ["rustls"] }

# File system & I/O
walkdir = "2.5"
ignore = "0.4"
tempfile = "3.13"
dunce = "1.0"
dirs = "6.0"  # Cross-platform home directory and config paths

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# System info
hostname = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
insta = "1.40"
serial_test = "3.2"

# Web framework (unified versions to resolve duplicates - Issue #462)
tower = { version = "0.5", features = ["util", "timeout", "load-shed"] }
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
tokio-tungstenite = "0.28"
tungstenite = "0.28"
hyper-util = { version = "0.1", features = ["tokio", "client", "server"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Optimized profile for development with better performance
[profile.dev-opt]
inherits = "dev"
opt-level = 1

# Profile for CI/CD testing
[profile.ci]
inherits = "dev"
debug = false
incremental = false

# Smaller binary size for distribution
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"

# Workspace optimization: compile dependencies with optimizations even in dev mode
[profile.dev.package."*"]
opt-level = 3
