[workspace]
members = [
    "clickfunnels-core",
    "clickfunnels-api",
    "clickfunnels-db",
    "clickfunnels-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Miyabi Team <team@miyabi.dev>"]
license = "MIT"
description = "ClickFunnels-like system implementation using SWML framework"
repository = "https://github.com/customer-cloud/miyabi-private"
homepage = "https://github.com/customer-cloud/miyabi-private"
keywords = ["clickfunnels", "marketing", "funnel", "automation", "swml"]
categories = ["web-programming", "marketing"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
mockall = "0.13"
