[package]
name = "clickfunnels-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clickfunnels-core = { path = "../clickfunnels-core" }
clickfunnels-db = { path = "../clickfunnels-db" }

# Async runtime
tokio = { workspace = true }
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Validation
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# HTTP utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json"] }
governor = "0.6"

# Logging
tracing = { workspace = true }

# Security
bcrypt = "0.15"
jsonwebtoken = "9.2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
