[package]
name = "clickfunnels-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clickfunnels-core = { path = "../clickfunnels-core" }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Email
lettre = "0.11"
lettre_email = "0.9"

# Logging
tracing = { workspace = true }

# Base64 encoding
base64 = "0.21"

# UUID and time
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"

# AWS SDK
aws-config = "1.1"
aws-sdk-ses = "1.13"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"
