[package]
name = "codex-miyabi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Thin CLI to exercise miyabi-integration for Codex × Miyabi Phase 1"
keywords = ["codex", "miyabi", "cli", "integration"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
miyabi-integration = { path = "../miyabi-integration", version = "0.1.2" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { workspace = true, features = ["json"] }
