[package]
name = "miyabi-a2a-gateway"
version = "0.1.0"
edition = "2021"
publish = false
description = "A2A (Agent-to-Agent) Gateway for unified inter-agent communication"
authors = ["Miyabi Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/Web
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# Internal dependencies
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
miyabi-core = { path = "../miyabi-core", version = "0.1.2" }
miyabi-llm = { path = "../miyabi-llm", version = "0.1.2" }
miyabi-agent-core = { path = "../miyabi-agent-core", version = "0.1.2" }

[dev-dependencies]
tokio-test = "0.4"
