[package]
name = "miyabi-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-to-Agent (A2A) task storage and communication for Miyabi"
keywords = ["a2a", "task-storage", "github-issues", "agent", "coordination"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
miyabi-types = { version = "0.1.0", path = "../miyabi-types" }
octocrab = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
