[package]
name = "miyabi-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-to-Agent (A2A) task storage and communication for Miyabi"
keywords = ["a2a", "task-storage", "github-issues", "agent", "coordination"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[features]
default = []
grpc = ["dep:tonic", "dep:prost"]

[dependencies]
miyabi-types = { version = "0.1.0", path = "../miyabi-types" }
octocrab = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

# HMAC-SHA256 for webhook authentication (Issue #276)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client for push notifications (Issue #274)
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# gRPC support (optional, v2.0 planned feature)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.6"

[build-dependencies]
# tonic-build is needed to compile .proto files when grpc feature is enabled
tonic-build = "0.12"
