[package]
name = "miyabi-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-to-Agent (A2A) task storage and communication for Miyabi"
keywords = ["a2a", "task-storage", "github-issues", "agent", "coordination"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[features]
default = ["http"]
grpc = ["dep:tonic", "dep:prost"]
http = ["dep:axum", "dep:tower-http"]

[dependencies]
miyabi-types = { version = "0.1.0", path = "../miyabi-types" }
miyabi-github = { version = "0.1.0", path = "../miyabi-github" }
octocrab = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }

# HMAC-SHA256 for webhook authentication (Issue #276)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client for push notifications (Issue #274)
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
# http = "1.0"  # Commented out - using axum's http re-export to avoid version conflicts

# JWT authentication (Issue #276) - moved from dev-dependencies
jsonwebtoken = "9.3"

# Async stream utilities
futures = "0.3"

# gRPC support (optional, v2.0 planned feature)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# HTTP REST API support (for dashboard)
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Additional dependencies for HTTP server binary
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.6"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12"
prost = "0.13"

[[bin]]
name = "dashboard-server"
path = "src/bin/dashboard-server.rs"
required-features = ["http"]

[build-dependencies]
# tonic-prost-build is needed to compile .proto files when grpc feature is enabled
tonic-prost-build = "0.14"
