[package]
name = "miyabi-agent-business"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Business Agents - 14 specialized agents for business strategy and operations"
keywords = ["agents", "ai", "business", "strategy", "marketing"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { version = "1.1.0", path = "../miyabi-agent-core" }
miyabi-types = { version = "1.1.0", path = "../miyabi-types" }
miyabi-core = { version = "1.1.0", path = "../miyabi-core" }
miyabi-llm = { version = "1.1.0", path = "../miyabi-llm" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.13"
