[package]
name = "miyabi-agent-business"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Business Agents - 14 specialized agents for business strategy and operations"
keywords = ["agents", "ai", "business", "strategy", "marketing"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core" }
miyabi-types = { path = "../miyabi-types" }
miyabi-core = { path = "../miyabi-core" }
miyabi-llm = { path = "../miyabi-llm" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.13"
