[package]
name = "miyabi-agent-business"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Business Agents - 14 specialized agents for business strategy and operations"
keywords = ["agents", "ai", "business", "strategy", "marketing"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core", version = "0.1.2" }
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
miyabi-core = { path = "../miyabi-core", version = "0.1.2" }
miyabi-llm = { path = "../miyabi-llm", version = "0.1.2" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
