[package]
name = "miyabi-agent-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi CodeGen Agent - AI-driven code generation with LLM integration"
keywords = ["agents", "ai", "codegen", "llm", "automation"]
categories = ["development-tools", "web-programming"]

[features]
default = []
git-worktree = []

[dependencies]
miyabi-agent-core = { version = "1.1.0", path = "../miyabi-agent-core" }
miyabi-agent-integrations = { version = "1.1.0", path = "../miyabi-agent-integrations" }
miyabi-types = { version = "1.1.0", path = "../miyabi-types" }
miyabi-core = { version = "1.1.0", path = "../miyabi-core" }
miyabi-llm = { version = "1.1.0", path = "../miyabi-llm" }
# miyabi-potpie MERGED into miyabi-knowledge/potpie - use miyabi-knowledge instead
miyabi-knowledge = { version = "1.1.0", path = "../miyabi-knowledge" }
miyabi-claudable = { version = "1.1.0", path = "../miyabi-claudable" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.13"
