[package]
name = "miyabi-agent-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi CodeGen Agent - AI-driven code generation with LLM integration"
keywords = ["agents", "ai", "codegen", "llm", "automation"]
categories = ["development-tools", "web-programming"]

[features]
default = []
git-worktree = []

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core" }
miyabi-agent-integrations = { path = "../miyabi-agent-integrations" }
miyabi-types = { path = "../miyabi-types" }
miyabi-core = { path = "../miyabi-core" }
miyabi-llm = { path = "../miyabi-llm" }
# miyabi-potpie MERGED into miyabi-knowledge/potpie - use miyabi-knowledge instead
miyabi-knowledge = { path = "../miyabi-knowledge" }
miyabi-claudable = { path = "../miyabi-claudable" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.13"
tonic = { version = "0.14", features = ["transport"] }
