[package]
name = "miyabi-agent-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Coordinator Agent - Task decomposition, DAG construction, and parallel execution"
keywords = ["agents", "ai", "coordination", "dag", "orchestration"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { version = "1.1.0", path = "../miyabi-agent-core" }
miyabi-types = { version = "1.1.0", path = "../miyabi-types" }
miyabi-core = { version = "1.1.0", path = "../miyabi-core" }
miyabi-github = { version = "1.1.0", path = "../miyabi-github" }
miyabi-llm = { version = "1.1.0", path = "../miyabi-llm" }
miyabi-workflow = { version = "1.1.0", path = "../miyabi-workflow", optional = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.11", features = ["v4"] }

[features]
workflow_dsl = ["miyabi-workflow"]

[dev-dependencies]
miyabi-agent-business = { version = "1.1.0", path = "../miyabi-agent-business" }
tempfile = "3.13"
