[package]
name = "miyabi-agent-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Coordinator Agent - Task decomposition, DAG construction, and parallel execution"
keywords = ["agents", "ai", "coordination", "dag", "orchestration"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core" }
miyabi-types = { path = "../miyabi-types" }
miyabi-core = { path = "../miyabi-core" }
miyabi-github = { path = "../miyabi-github" }
miyabi-llm = { path = "../miyabi-llm" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
miyabi-agent-business = { path = "../miyabi-agent-business" }
tempfile = "3.13"
