[package]
name = "miyabi-agent-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Coordinator Agent - Task decomposition, DAG construction, and parallel execution"
keywords = ["agents", "ai", "coordination", "dag", "orchestration"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core", version = "0.1.2" }
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
miyabi-core = { path = "../miyabi-core", version = "0.1.2" }
miyabi-github = { path = "../miyabi-github", version = "0.1.2" }
miyabi-llm = { path = "../miyabi-llm", version = "0.1.2" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
futures = "0.3"

[features]
default = ["workflow_dsl"]
workflow_dsl = ["dep:miyabi-workflow", "dep:uuid"]

[dependencies.miyabi-workflow]
path = "../miyabi-workflow"
version = "0.1.2"
optional = true

[dependencies.uuid]
version = "1.11"
features = ["v4"]
optional = true

[dev-dependencies]
miyabi-agent-business = { path = "../miyabi-agent-business", version = "0.1.2" }
tempfile = "3.13"
