[package]
name = "miyabi-agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and utilities for Miyabi agents"
keywords = ["agents", "ai", "async", "automation"]
categories = ["development-tools"]

[dependencies]
miyabi-types = { version = "0.1.0", path = "../miyabi-types" }
miyabi-core = { version = "0.1.0", path = "../miyabi-core" }
miyabi-knowledge = { version = "0.1.0", path = "../miyabi-knowledge" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
