[package]
name = "miyabi-agent-integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Integration Agents - External service integrations (Discord, Potpie, Refresher)"
keywords = ["agents", "ai", "integrations", "discord", "potpie"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core" }
miyabi-types = { path = "../miyabi-types" }
miyabi-core = { path = "../miyabi-core" }
miyabi-github = { path = "../miyabi-github" }
# miyabi-potpie MERGED into miyabi-knowledge/potpie - use miyabi-knowledge instead
miyabi-knowledge = { path = "../miyabi-knowledge" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
octocrab = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
